deploy/kubernetes/overlays/local-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wdl-gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: admin.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
    - host: "*.workers.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wdl-assets
spec:
  ingressClassName: nginx
  rules:
    - host: s3mock.local
      http:
        paths:
          - path: /wdl-assets/assets
            pathType: Prefix
            backend:
              service:
                name: assets-proxy
                port:
                  name: http
